--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <body>
     <main>
-      <section class="editable-text">
+      <section class="editable-text active">
         <button type="button" class="edit-button">Edit</button>
         <h1 class="text-element">Your title</h1>
 
