--- a/index.html
+++ b/index.html
@@ -23,14 +23,19 @@
             <div class="form-group">
               <label>
                 Font color:
-                <input type="color" />
+                <input type="color" name="color" />
               </label>
             </div>
 
             <div class="form-group">
               <label>
                 Font size:
-                <input type="number" />
+                <input
+                  type="number"
+                  name="font-size"
+                  data-unit="px"
+                  value="32"
+                />
                 px
               </label>
             </div>
@@ -38,7 +43,7 @@
             <div class="form-group">
               <label>
                 Font family:
-                <select>
+                <select name="font-family">
                   <option value="sans-serif">sans-serif</option>
                   <option value="serif">serif</option>
                 </select>
@@ -50,6 +55,7 @@
 
       <section class="editable-text">
         <button type="button" class="edit-button">Edit</button>
+        <button type="button" class="save-button">Save</button>
         <p class="text-element">Go ahead, edit me however you want!</p>
 
         <div class="editor">
@@ -60,14 +66,19 @@
             <div class="form-group">
               <label>
                 Font color:
-                <input type="color" />
+                <input type="color" name="color" />
               </label>
             </div>
 
             <div class="form-group">
               <label>
                 Font size:
-                <input type="number" />
+                <input
+                  type="number"
+                  name="font-size"
+                  data-unit="px"
+                  value="16"
+                />
                 px
               </label>
             </div>
@@ -75,7 +86,7 @@
             <div class="form-group">
               <label>
                 Font family:
-                <select>
+                <select name="font-family">
                   <option value="sans-serif">sans-serif</option>
                   <option value="serif">serif</option>
                 </select>
